--- a/index.html
+++ b/index.html
@@ -5,11 +5,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Prueba DSW_2019</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="icon" type="image/jpg" href="/DSW16_02_2019_prueba/images/logo.unad.png">
+    <title>Seguridad Informatica</title>
 </head>
 
 <body>
-    <h1>Esto es una prueba DSW_2019</h1>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="./index.html">Inicio</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav ml-auto">
+                    <a class="nav-item nav-link" href="imagen.html">Imagen</a>
+                    <a class="nav-item nav-link" href="">Buttom</a>
+                    <a class="nav-item nav-link" href="">Buttom</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <header>
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="header-content-left">
+                        <video src="/DSW16_02_2019_prueba/video/Conceptos Básicos sobre Seguridad Informática.mp4"
+                            autoplay width="460" height="480" controls></video>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="header-content-right">
+                        <h1 class="display-5">
+                            <div class="5">Lorem</div>
+                        </h1>
+                        <p class="mt-4">
+                            <div class="4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, ad, odit
+                                doloremque ut sequi a quibusdam velit ullam, non distinctio odio ducimus dolore
+                                consectetur aut labore nihil consequuntur suscipit illo.</div>
+                        </p>
+                        <a href="" class="btn btn-outline-primary btn-lg mt-2">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <footer>
+        <div class="container">
+            <p>&copy; Website 2019. All Rights Reserved.</p>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
