Borrador index y imagen.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="col-md-6">
                     <div class="header-content-left">
                         <video src="/DSW16_02_2019_prueba/video/Conceptos Básicos sobre Seguridad Informática.mp4"
-                            autoplay width="460" height="480" controls></video>
+                            autoplay muted width="460" height="480" controls></video>
                     </div>
                 </div>
                 <div class="col-md-6">
