--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="icon" type="image/jpg" href="/DSW16_02_2019_prueba/images/logo.unad.png">
-    <title>Seguridad Informatica</title>
+    <title>Seguridad Inform&aacute;tica</title>
+    <link href="./style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -21,9 +22,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ml-auto">
-                    <a class="nav-item nav-link" href="imagen.html">Imagen</a>
-                    <a class="nav-item nav-link" href="">Buttom</a>
-                    <a class="nav-item nav-link" href="">Buttom</a>
+                    <a class="nav-item nav-link" href="imagen.html">MUTLTIMEDIA</a>
+                    <a class="nav-item nav-link" href="">ACTIVIDADES</a>
+                    <a class="nav-item nav-link" href="">AUTORES</a>
                 </div>
             </div>
         </div>
@@ -31,16 +32,19 @@
     <header>
         <div class="container mt-5">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col">
                     <div class="header-content-left">
-                        <video src="/DSW16_02_2019_prueba/video/Conceptos Básicos sobre Seguridad Informática.mp4"
-                            autoplay muted width="460" height="480" controls></video>
+			    <iframe id="ytplayer" 
+				    type="text/html" 
+				    width="640" height="360"
+				    src="https://www.youtube.com/embed/ooJSgsB5fIE?autoplay=1"
+				    frameborder="0"></iframe>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col">
                     <div class="header-content-right">
                         <h1 class="display-5">
-                            <div class="5">Lorem</div>
+                            <div class="5">Glosario de Seguridad Inform&aacute;tica</div>
                         </h1>
                         <p class="mt-4">
                             <div class="4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, ad, odit
