mejorar css y contenido

--- a/imagen.html
+++ b/imagen.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="icon" type="image/jpg" href="/DSW16_02_2019_prueba/images/logo.unad.png">
+    <link href="./style.css" rel="stylesheet" type="text/css" />
   <title>Seguridad Informatica</title>
 </head>
 
