juego de memoria

--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html lang="es">
 
 <head>
+    <title>Seguridad Inform&aacute;tica (OVI UNAD)</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="icon" type="image/jpg" href="/DSW16_02_2019_prueba/images/logo.unad.png">
-    <title>Seguridad Inform&aacute;tica</title>
     <link href="./style.css" rel="stylesheet" type="text/css" />
+    <meta name="description" content="Glosario de seguridad Informatica<">
+    <meta name="keywords" content="Seguridad, antivirus, que es un antivirus, que es un keylogger">
+    <meta name="author" content="John Fredy perez, felipe valdes, unad, contenido de ONA SYSTEMS">
 </head>
 
 <body>
@@ -23,9 +26,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ml-auto">
-                    <a class="nav-item nav-link" href="#Multimedia">MUTLTIMEDIA</a>
-                    <a class="nav-item nav-link" href="#Actividades">ACTIVIDADES</a>
-                    <a class="nav-item nav-link" href="#Autores">AUTORES</a>
+                    <a class="nav-item nav-link" href="#Multimedia">&#9655; MULTIMEDIA</a>
+                    <a class="nav-item nav-link" href="#Actividades">&#128206; ACTIVIDADES</a>
+                    <a class="nav-item nav-link" href="./juego.html">&#9860; JUEGO DE MEMORIA</a>
+                    <a class="nav-item nav-link" href="#MakingOf">&#128074; MAKING OF</a>
+                    <a class="nav-item nav-link" href="#Autores">&#128101; AUTORES/CONTACTO</a>
+                    <a class="nav-item nav-link" href="#Referencias">&#128203;REFERENCIAS</a>
                 </div>
             </div>
         </div>
@@ -40,7 +46,7 @@
 			    <iframe id="ytplayer" 
 				    type="text/html" 
 				    width="640" height="360"
-				    src="https://www.youtube.com/embed/ooJSgsB5fIE"
+				    src="https://www.youtube.com/embed/cKOFtjR2Iig"
 				    frameborder="0"></iframe>
                     </div>
                 </div>
@@ -50,9 +56,11 @@
                             <div class="5">Glosario de Seguridad Inform&aacute;tica</div>
                         </h1>
                         <p class="mt-4">
-                            <div class="4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, ad, odit
-                                doloremque ut sequi a quibusdam velit ullam, non distinctio odio ducimus dolore
-                                consectetur aut labore nihil consequuntur suscipit illo.</div>
+                            <div class="4">
+			    
+
+
+			    </div>
                         </p>
                         <a href="#Actividades" class="btn btn-outline-primary btn-lg mt-2">Ver Actividades</a>
                     </div>
@@ -70,21 +78,18 @@
 			    <iframe id="ytplayer" 
 				    type="text/html" 
 				    width="640" height="360"
-				    src="https://www.youtube.com/embed/ooJSgsB5fIE"
+				    src="https://www.youtube.com/embed/sLwddhjMixs"
 				    frameborder="0"></iframe>
                     </div>
                 </div>
                 <div class="col">
                     <div class="header-content-right">
                         <h1 class="display-5">
-                            <div class="5">Glosario de Seguridad Inform&aacute;tica</div>
+                            <div class="5">Seguridad Inform&aacute;tica</div>
                         </h1>
                         <p class="mt-4">
-                            <div class="4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, ad, odit
-                                doloremque ut sequi a quibusdam velit ullam, non distinctio odio ducimus dolore
-                                consectetur aut labore nihil consequuntur suscipit illo.</div>
+                            <div class="4">Este video describe los conceptos del glosario</div>
                         </p>
-                        <a href="" class="btn btn-outline-primary btn-lg mt-2">Read More</a>
                     </div>
                 </div>
             </div>
@@ -100,17 +105,18 @@
 			    <iframe id="ytplayer" 
 				    type="text/html" 
 				    width="640" height="360"
-				    src="https://www.youtube.com/embed/ooJSgsB5fIE"
+				    src="https://www.youtube.com/embed/oYza0zm1c18"
 				    frameborder="0"></iframe>
                     </div>
                 </div>
                 <div class="col">
                     <div class="header-content-right">
                         <h1 class="display-5">
-                            <div class="5">Actividades</div>
+                            <a href='./juego.html' >Juego de Memoria</a>
                         </h1>
                         <p class="mt-4">
                             <div class="4">
+                            	<div class="5">Actividades</div>
 				    <h2>Actividad 1</h2>
 				    <p>Realice un análisis de la seguridad de un servidor de su organización, usando nmap u otras herramientas, analice cuales puertos están abiertos a conexiones de internet</p>
 				    <h2>Actividad 2</h2>
@@ -135,16 +141,65 @@
                 </div>
                 <div class="col">
                     <div class="header-content-right">
-			    <h2>John Fredy Perez (1.077.967.769)</h2>
-			    <h2>Felipe Valdes Rueda (80.765.582)</h2>
+			    <h2>John Fredy Perez (320-336-2182) UNAD</h2>
+			    <h2>Felipe Valdes Rueda (312-496-8693) UNAD</h2>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    <a name='MakingOf'></a>
+    <section>
+	
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col">
+			    <iframe id="ytplayer" 
+				    type="text/html" 
+				    width="640" height="360"
+				    src="https://www.youtube.com/embed/oYza0zm1c18"
+				    frameborder="0"></iframe>
+			    <br/>
+			    <iframe id="ytplayer" 
+				    type="text/html" 
+				    width="640" height="360"
+				    src="https://www.youtube.com/embed/yyNN5UfjGKc"
+				    frameborder="0"></iframe>
+			
+                </div>
+                <div class="col">
+		    <h1>making OF</h1>
+			
+                    <div class="header-content-right">
+			    <h2>Mira el video para aprender como hacer OVIs</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>    
+    <a name='Referencias'></a>
+    <section>
+	
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col">
+                </div>
+                <div class="col">
+		    <h1>Referencias</h1>
+			
+                    <div class="header-content-right">
+			    <a href="https://www.onasystems.net/glosario-terminos-seguridad/">https://www.onasystems.net/glosario-terminos-seguridad/</a>
+			    <a href="http://www.keygenmusic.net/?page=pack/packlist&lang=en">http://www.keygenmusic.net/?page=pack/packlist&lang=en</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>        
     <footer>
         <div class="container">
-            <p>&copy; UNAD 2019. Creative Commons CC-0 </p>
+            <p>&copy; UNAD 2019 www.unad.edu.co Sede nacional José Celestino Mutis: Calle 14 sur No. 14 - 23
+PBX: ( +57 1 ) 344 3700 Bogotá D.C., Colombia
+Línea nacional gratuita desde Colombia: 018000115223. Creative Commons CC-0 </p>
 	</div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
